<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/start_bg"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".view.MainActivity">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/harry_potter"
            android:letterSpacing="0.02"
            android:shadowColor="@color/black"
            android:shadowRadius="10"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="48sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@color/white"
            android:elevation="5dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textColor="@color/base_darker" />

                <TextView
                    style="@style/TextView_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_your_name"
                    android:textColor="@color/base" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/gray"
                    app:boxStrokeColor="@color/base"
                    app:hintAnimationEnabled="true">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/main_name_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/harry_potter"
                        android:gravity="center"
                        android:hint="@string/name"
                        android:inputType="textPersonName"
                        android:letterSpacing="0.1"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:textSize="@dimen/text_regular_24sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/main_button_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_regular"
                    android:backgroundTint="@color/base_secondary"
                    android:fontFamily="@font/harry_potter"
                    android:letterSpacing="0.02"
                    android:text="@string/start_quiz"
                    android:textColor="@color/base_darker"
                    android:textSize="@dimen/text_smaller_20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</FrameLayout>

