<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_question1"
    android:fillViewport="true"
    tools:context=".view.QuestionsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/margin_regular_16dp">

        <TextView
            android:id="@+id/question_title"
            style="@style/TextView_Title"
            android:layout_marginTop="@dimen/margin_bigger_20dp"
            android:gravity="center"
            tools:text="@string/question1" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/margin_smaller_12dp"
            android:background="@color/white"
            android:elevation="5dp"
            app:cardCornerRadius="@dimen/card_radius_8dp"
            app:cardElevation="@dimen/card_elevation_5dp">

            <ImageView
                android:id="@+id/question_banner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/harry_potter_image"
                android:scaleType="centerCrop"
                tools:src="@drawable/image1" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/progress_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_smaller_12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:indeterminate="false"
                android:max="7"
                android:minHeight="50dp"
                android:progress="0" />

            <TextView
                android:id="@+id/progress_text"
                style="@style/TextView_Title"
                android:layout_marginStart="@dimen/card_radius_8dp"
                android:gravity="center_vertical"
                android:padding="@dimen/card_elevation_5dp"
                tools:text="1/7"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/option_one"
            style="@style/TextView_Option"
            tools:text="@string/option1.1" />

        <TextView
            android:id="@+id/option_two"
            style="@style/TextView_Option"
            tools:text="@string/option1.2" />

        <TextView
            android:id="@+id/option_three"
            style="@style/TextView_Option"
            tools:text="@string/option1.3" />

        <TextView
            android:id="@+id/option_four"
            style="@style/TextView_Option"
            tools:text="@string/option1.4" />

        <Button
            android:id="@+id/main_button_start"
            style="@style/Button"
            android:text="@string/submit" />

    </LinearLayout>

</ScrollView>